[package]
name = "fineworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.9.1", features = ["dynamic"]}
bevy_rapier3d = "0.19.0"
bitflags = "1.3.2"
futures-lite = "1.12.0"
noise = "0.8.2"
rand = "0.8.5"


# [target.x86_64-unknown-linux-gnu]
# linker = "clang"
# rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]



